--- a/templates/login.html
+++ b/templates/login.html
@@ -31,5 +31,8 @@
     <input type="submit" value="Submit">
   </form>
   <a style="margin-top: 5em; margin-left:20%;margin-right: 20%;" class="container" role="button" href="{{url_for('register')}}" style="background-color:#aedc8a;">Register</a>
+  <br>
+  <br>
+  <p>{{msg}} &nbsp; </p>
 </body>
 </html>
