change access key

--- a/templates/main.html
+++ b/templates/main.html
@@ -93,6 +93,7 @@ img{
           <th scope="col">Title</th>
           <th scope="col">Artist</th>
           <th scope="col">Year</th>
+          <th scope="col">Image</th>
         </tr>
       </thead>
       <tbody id="table_body">
