--- a/templates/main.html
+++ b/templates/main.html
@@ -103,23 +103,26 @@ img{
   <script>
     let chart_data = {{ data|tojson }}
     let img = {{images|tojson}}
-    console.log(chart_data[0].title ,chart_data.length)
-
-    // console.log(img["#40.jpg"])
-
-    // for (let i = 0 ; i<chart_data.length;i++){
-    //   console.log(chart_data[i]['title'])
-    // }
     let tableData=""
+    if(chart_data.length >0){
+      console.log(chart_data[0].title ,chart_data.length)
 
-    for (let i = 0 ; i< chart_data.length; i++){
-      values = chart_data[i]
-      console.log(values.title)
-      filename = values.title+".jpg"
-      console.log(img[filename])
-      tableData+=`<tr> <td>${values.title}</td> <td>${values.artist}</td> <td>${values.year}</td> <td> <img src="${img[filename]}"/><td>`
+      // console.log(img["#40.jpg"])
+
+      // for (let i = 0 ; i<chart_data.length;i++){
+      //   console.log(chart_data[i]['title'])
+      // }
+
+      for (let i = 0 ; i< chart_data.length; i++){
+        values = chart_data[i]
+        console.log(values.title)
+        filename = values.title+".jpg"
+        console.log(img[filename])
+        tableData+=`<tr> <td>${values.title}</td> <td>${values.artist}</td> <td>${values.year}</td> <td> <img src="${img[filename]}"/><td>`
+      }
     }
-    document.getElementById("table_body").innerHTML=tableData;
+    else tableData += "<p> NO DATA </p>"
+      document.getElementById("table_body").innerHTML=tableData;
   </script>
 </body>
 </html>
