add year and artist required

--- a/templates/main.html
+++ b/templates/main.html
@@ -99,9 +99,9 @@ img{
       <label for="title">Title</label>
       <input type="text" id="title" name="title" placeholder="Title" required>
       <label for="artist">Artist</label>
-      <input type="text" id="artist" name="artist" placeholder="Artist">
+      <input type="text" id="artist" name="artist" placeholder="Artist" required>
       <label for="year">Year</label>
-      <input type="text" id="year" name="year" placeholder="Year">
+      <input type="text" id="year" name="year" placeholder="Year" required>
       <input type="submit" value="Query">
       <input type="text" id="name" name="name" value={{name}} readonly>
       
