--- a/templates/main.html
+++ b/templates/main.html
@@ -73,6 +73,10 @@ img{
     <a href="#sub">Subscription</a>
     <a href="#query">Query</a>
     <p>Hello, {{name}} &nbsp; </p>
+    <form action="/">
+      <input type="submit" value="LOG OUT" />
+  </form>
+  
   </div>
 
   <div id = "sub" style="padding-left:16px">
