--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
     <label for="email">Email</label>
     <input type="text" id="email" name="email" placeholder="Email" required>
     <label for="password">Password</label>
-    <input type="text" id="password" name="password" placeholder="Password" required>
+    <input type="password" id="password" name="password" placeholder="Password" required>
 
     <input type="submit" value="Submit">
   </form>
